--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -419,6 +419,14 @@
                   android:exported="true">
         </activity>
 
+        <activity android:name=".tuner.LockscreenActivity"
+                  android:theme="@style/ExTunerSettings"
+                  android:label="@string/tuner_lock_screen"
+                  android:process=":tuner"
+                  android:parentActivityName="com.msm.xtended.fragments.LockScreenSettings"
+                  android:exported="true">
+        </activity>
+
         <activity
             android:name=".stackdivider.ForcedResizableInfoActivity"
             android:theme="@style/ForcedResizableTheme"
